# click-mcp

./: .gitignore  CONTEXT_PASSING_RESEARCH.md  LICENSE  PLAN.md  README.md  RELEASE_PROCESS.md  hatch.toml  hatch_build.py  pyproject.toml  pytest.ini  setup.py  test_fix.py
.github/workflows/: publish-to-pypi.yml  python-tests.yml
click_mcp/: __init__.py  scanner.py  server.py
tests/: context_cli.py  test_context_passing.py  test_hierarchical_commands.py  test_mcp_schema_validation.py  test_mcp_server.py  test_mcp_server.py.new
