[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "click-mcp"
version = "0.1.0"
description = "Extend Click applications with Model Context Protocol (MCP) support"
readme = "README.md"
authors = [
    {name = "Stephen Crowe"}
]
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=7.0",
]

[project.urls]
Homepage = "https://github.com/crowecawcaw/click-mcp"
Issues = "https://github.com/crowecawcaw/click-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["click_mcp"]

[tool.hatch.build.hooks.check]
dependencies = ["black", "pylint", "pytest", "pytest-cov"]
test = "pytest --cov=click_mcp tests/"
style = "black --check click_mcp tests"
lint = "pylint click_mcp tests"

[tool.hatch.version]
path = "click_mcp/_version.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "pylint>=2.15.0",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.envs.lint]
dependencies = [
    "black>=23.0.0",
    "pylint>=2.15.0",
]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"
cov = "pytest --cov=click_mcp --cov-report=term-missing {args:tests}"

[tool.hatch.envs.lint.scripts]
style = "black --check click_mcp tests"
format = "black click_mcp tests"
check = "pylint click_mcp tests"
all = ["format", "check"]

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=click_mcp --cov-report=term-missing"
