[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "click-mcp"
version = "0.1.0"
description = "Extend Click applications with Model Context Protocol (MCP) support"
readme = "README.md"
authors = [
    {name = "Stephen Crowe"}
]
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=7.0",
]

[project.urls]
Homepage = "https://github.com/crowecawcaw/click-mcp"
Issues = "https://github.com/crowecawcaw/click-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["click_mcp"]

[tool.hatch.version]
path = "click_mcp/_version.py"

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
line-length = 88

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=click_mcp --cov-report=term-missing"
